--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -42,7 +42,7 @@ body {
 /* Customize container */
 @media (min-width: 48em) {
   .container {
-    max-width: 46rem;
+    max-width: 70rem;
   }
 }
 .container-narrow > hr {
@@ -53,6 +53,11 @@ body {
 .jumbotron {
   text-align: center;
   border-bottom: .05rem solid #e5e5e5;
+
+  &.text-align-left {
+    text-align: left;
+    padding: 1rem 2rem;
+  }
 }
 .jumbotron .btn {
   padding: .75rem 1.5rem;
@@ -84,4 +89,9 @@ body {
   .jumbotron {
     border-bottom: 0;
   }
+}
+
+.btn-container {
+  display: flex;
+  justify-content: space-around;
 }
